--- a/TinyVision/App.xaml
+++ b/TinyVision/App.xaml
@@ -1,9 +1,6 @@
-﻿<Application x:Class="TinyVision.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TinyVision"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<unity:PrismApplication x:Class="TinyVision.App"
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:unity="http://prismlibrary.com/">
+
+</unity:PrismApplication>
