--- a/WorkSpace/Views/ImageTab.xaml
+++ b/WorkSpace/Views/ImageTab.xaml
@@ -1,12 +1,23 @@
 ﻿<UserControl x:Class="WorkSpace.Views.ImageTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WorkSpace.Views"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mvvm="http://prismlibrary.com/"
+             mvvm:ViewModelLocator.AutoWireViewModel="True"
+             mc:Ignorable="d" >
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal">
+            <CheckBox IsChecked="{Binding CanSave,Mode=TwoWay}">Modify</CheckBox>
+        </StackPanel>
+        <Image Grid.Row="1" Grid.Column="1" Source="{Binding ImageFilePath}" Stretch="None"></Image>
     </Grid>
 </UserControl>
