--- a/WorkSpace/Views/VideoTab.xaml
+++ b/WorkSpace/Views/VideoTab.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WorkSpace.Views"
+             xmlns:mvvm="http://prismlibrary.com/"
              mc:Ignorable="d"
+             mvvm:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         
