--- a/WorkSpace/Views/WorkSpace.xaml
+++ b/WorkSpace/Views/WorkSpace.xaml
@@ -1,12 +1,25 @@
 ﻿<UserControl x:Class="WorkSpace.Views.WorkSpace"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WorkSpace.Views"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mvvm="http://prismlibrary.com/"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             mvvm:ViewModelLocator.AutoWireViewModel="True"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="TabItem">
+            <Setter Property="Header" Value="{Binding DataContext.FileName}" />
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        
+        <TabControl mvvm:RegionManager.RegionName="ImageTabs" Background="LightGray">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding Path=TabChangedCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </TabControl>
     </Grid>
 </UserControl>
