--- a/WorkSpace/Views/ImageTab.xaml
+++ b/WorkSpace/Views/ImageTab.xaml
@@ -18,6 +18,6 @@
         <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal">
             <CheckBox IsChecked="{Binding CanSave,Mode=TwoWay}">Modify</CheckBox>
         </StackPanel>
-        <Image Grid.Row="1" Grid.Column="1" Source="{Binding ImageFilePath}" Stretch="None"></Image>
+        <Image Grid.Row="1" Grid.Column="1" Source="{Binding BitmapImageSource}" Stretch="None"></Image>
     </Grid>
 </UserControl>
