--- a/TinyVision/Views/MainWindow.xaml
+++ b/TinyVision/Views/MainWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mvvm="http://prismlibrary.com/"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         mvvm:ViewModelLocator.AutoWireViewModel="True"
+        x:Name="Mw"
         Title="{Binding Title}" Width="1366" Height="768" MinHeight="480" MinWidth="640"
         WindowStartupLocation="CenterScreen">
     <Grid x:Name="MainGrid">
@@ -35,7 +37,7 @@
                         <Image Source="../Icon/Save.png" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="另存为(_A)...">
+                <MenuItem Header="另存为(_A)..." Command="{Binding SaveAs}">
                     <MenuItem.Icon>
                         <Image Source="../Icon/SaveAs.png" />
                     </MenuItem.Icon>
@@ -78,7 +80,7 @@
                 <Separator />
                 <MenuItem Header="最近文件(_R)" />
                 <Separator />
-                <MenuItem Header="退出(_X)" Command="ApplicationCommands.Close" />
+                <MenuItem Header="退出(_X)" Command="{Binding Close}" CommandParameter="{Binding ElementName=Mw}" />
             </MenuItem>
             <MenuItem Header="编辑(_E)">
                 <MenuItem Command="ApplicationCommands.Cut" Header="剪切(_T)">
@@ -758,4 +760,9 @@
 
         <StatusBar Grid.Row="3">TinyVision</StatusBar>
     </Grid>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closed">
+            <i:InvokeCommandAction Command="{Binding Close}" CommandParameter="{Binding ElementName=Mw}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 </Window>
