--- a/WorkSpace/Views/RotateWindow.xaml
+++ b/WorkSpace/Views/RotateWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkSpace.Views"
         mc:Ignorable="d"
-        Title="任意旋转" Width="200" Height="160" FontSize="14">
+        Title="任意旋转" Width="200" Height="160" FontSize="14" WindowStartupLocation="CenterScreen">
 <StackPanel VerticalAlignment="Center">
         <CheckBox x:Name="IsClockWise" Content="顺时针" Margin="0 10" HorizontalAlignment="Center"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10">
