--- a/WorkSpace/Views/ImageTab.xaml
+++ b/WorkSpace/Views/ImageTab.xaml
@@ -15,6 +15,9 @@
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button Command="{Binding CloseTab}">关闭标签</Button>
+        </StackPanel>
         <Image Grid.Row="1" Grid.Column="1" Source="{Binding BitmapImageSource}" Stretch="None"></Image>
     </Grid>
 </UserControl>
