--- a/WorkSpace/Views/ImageTab.xaml
+++ b/WorkSpace/Views/ImageTab.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
-             mc:Ignorable="d" >
+             mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -18,6 +18,14 @@
         <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal">
             <Button Command="{Binding CloseTab}">关闭标签</Button>
         </StackPanel>
-        <Image Grid.Row="1" Grid.Column="1" Source="{Binding BitmapImageSource}" Stretch="None"></Image>
+
+        <Canvas x:Name="CanvasPanel" Grid.Column="1" Grid.Row="1">
+            <Border Height="{Binding ElementName=CanvasPanel, Path=ActualHeight}" Width="{Binding ElementName=CanvasPanel, Path=ActualWidth}" Background="LightGray">
+                <ScrollViewer  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                        <Image   Source="{Binding BitmapImageSource}" Stretch="None"/>
+                </ScrollViewer>
+            </Border>
+        </Canvas>
+        
     </Grid>
 </UserControl>
